<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!-- Did small change so that they are not all ConstraintLayout, but
         every layout would be good-->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linearLayout"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/instructions_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:text="@string/instructions_textView"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/instruction_one_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/instruction_one"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instruction_two_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/instruction_two"
            android:textAlignment="center" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="40dp"
            android:text="Next" />
    </LinearLayout>

</layout>